[metadata]
name = unikud
version = 0.0.1
author = Morris Alper
author_email = morrisalp@gmail.com
description = A small example package
long_description = Hebrew nikud with deep learning
long_description_content_type = text/markdown
url = https://dagshub.com/morrisalp/unikud
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src