[metadata]
name = unikud
version = 0.1.0
author = Morris Alper
author_email = morrisalp@gmail.com
description = A small example package
long_description = Hebrew nikud with deep learning
long_description_content_type = text/markdown
url = https://dagshub.com/morrisalp/unikud
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages =
    unikud
python_requires = >=3.7
install_requires =
    torch == 1.11.0
    transformers == 4.15.0

[options.packages.find]
where = src